important_logs/vlfeat___vlfeat_build.log
Running command: make clean
Detected compiler: gcc 12
GCC <= 4.6.0 detected, disabling AVX.
MATLAB support disabled
The MALTAB version will be detected in the next phase of Make
rm -f bin/glnxa64/objs/aib.d bin/glnxa64/objs/array.d bin/glnxa64/objs/covdet.d bin/glnxa64/objs/dsift.d bin/glnxa64/objs/fisher.d bin/glnxa64/objs/generic.d bin/glnxa64/objs/getopt_long.d bin/glnxa64/objs/gmm.d bin/glnxa64/objs/hikmeans.d bin/glnxa64/objs/hog.d bin/glnxa64/objs/homkermap.d bin/glnxa64/objs/host.d bin/glnxa64/objs/ikmeans.d bin/glnxa64/objs/imopv.d bin/glnxa64/objs/imopv_sse2.d bin/glnxa64/objs/kdtree.d bin/glnxa64/objs/kmeans.d bin/glnxa64/objs/lbp.d bin/glnxa64/objs/liop.d bin/glnxa64/objs/mathop.d bin/glnxa64/objs/mathop_avx.d bin/glnxa64/objs/mathop_sse2.d bin/glnxa64/objs/mser.d bin/glnxa64/objs/pgm.d bin/glnxa64/objs/quickshift.d bin/glnxa64/objs/random.d bin/glnxa64/objs/rodrigues.d bin/glnxa64/objs/scalespace.d bin/glnxa64/objs/sift.d bin/glnxa64/objs/slic.d bin/glnxa64/objs/stringop.d bin/glnxa64/objs/svm.d bin/glnxa64/objs/svmdataset.d bin/glnxa64/objs/vlad.d bin/glnxa64/objs/aib.o bin/glnxa64/objs/array.o bin/glnxa64/objs/covdet.o bin/glnxa64/objs/dsift.o bin/glnxa64/objs/fisher.o bin/glnxa64/objs/generic.o bin/glnxa64/objs/getopt_long.o bin/glnxa64/objs/gmm.o bin/glnxa64/objs/hikmeans.o bin/glnxa64/objs/hog.o bin/glnxa64/objs/homkermap.o bin/glnxa64/objs/host.o bin/glnxa64/objs/ikmeans.o bin/glnxa64/objs/imopv.o bin/glnxa64/objs/imopv_sse2.o bin/glnxa64/objs/kdtree.o bin/glnxa64/objs/kmeans.o bin/glnxa64/objs/lbp.o bin/glnxa64/objs/liop.o bin/glnxa64/objs/mathop.o bin/glnxa64/objs/mathop_avx.o bin/glnxa64/objs/mathop_sse2.o bin/glnxa64/objs/mser.o bin/glnxa64/objs/pgm.o bin/glnxa64/objs/quickshift.o bin/glnxa64/objs/random.o bin/glnxa64/objs/rodrigues.o bin/glnxa64/objs/scalespace.o bin/glnxa64/objs/sift.o bin/glnxa64/objs/slic.o bin/glnxa64/objs/stringop.o bin/glnxa64/objs/svm.o bin/glnxa64/objs/svmdataset.o bin/glnxa64/objs/vlad.o
rm -f bin/glnxa64/aib.d bin/glnxa64/mser.d bin/glnxa64/sift.d bin/glnxa64/test_gauss_elimination.d bin/glnxa64/test_getopt_long.d bin/glnxa64/test_gmm.d bin/glnxa64/test_heap-def.d bin/glnxa64/test_host.d bin/glnxa64/test_imopv.d bin/glnxa64/test_kmeans.d bin/glnxa64/test_liop.d bin/glnxa64/test_mathop.d bin/glnxa64/test_mathop_abs.d bin/glnxa64/test_nan.d bin/glnxa64/test_qsort-def.d bin/glnxa64/test_rand.d bin/glnxa64/test_sqrti.d bin/glnxa64/test_stringop.d bin/glnxa64/test_svd2.d bin/glnxa64/test_threads.d bin/glnxa64/test_vec_comp.d
rm -rf doc/build
rm -f  `find . -name '*~'`
rm -f  `find . -name '.DS_Store'`
rm -f  `find . -name '.gdb_history'`
rm -f  `find . -name '._*'`
rm -rf ./results
Command finished with return code: 0

Running command: make distclean
Detected compiler: gcc 12
GCC <= 4.6.0 detected, disabling AVX.
MATLAB support disabled
The MALTAB version will be detected in the next phase of Make
rm -rf bin
rm -f docsrc/*.pyc
rm -rf doc
rm -rf toolbox/doc
rm -rf /tmp/tmp-vlfeat-0.9.21-*
rm -f vlfeat-0.9.21-bin.tar.gz
rm -f vlfeat-0.9.21.tar.gz
Command finished with return code: 0

Running command: rm -rf autom4te.cache
Command finished with return code: 0

Running command: rm -f config.status config.cache config.log
Command finished with return code: 0

Running command: ./autogen
/bin/sh: 1: ./autogen: not found
Command finished with return code: 127

Running command: ./configure
/bin/sh: 1: ./configure: not found
Command finished with return code: 127

Running command: make
Detected compiler: gcc 12
GCC <= 4.6.0 detected, disabling AVX.
MATLAB support disabled
The MALTAB version will be detected in the next phase of Make
             MK bin/glnxa64/
             MK bin/glnxa64/objs/
             CC bin/glnxa64/objs/aib.o
             CC bin/glnxa64/objs/array.o
             CC bin/glnxa64/objs/covdet.o
             CC bin/glnxa64/objs/dsift.o
             CC bin/glnxa64/objs/fisher.o
             CC bin/glnxa64/objs/generic.o
vl/generic.c: In function ‘vl_configuration_to_string_copy’:
vl/generic.c:903:14: warning: null destination pointer [-Wformat-truncation=]
  903 |     length = snprintf(string, length,
      |              ^~~~~~~~~~~~~~~~~~~~~~~~
  904 |                       "VLFeat version %s\n"
      |                       ~~~~~~~~~~~~~~~~~~~~~
  905 |                       "    Static config: %s\n"
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~
  906 |                       "    %" VL_FMT_SIZE " CPU(s): %s\n"
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  907 | #if defined(_OPENMP)
      | ~~~~~~~~~~~~~~~~~~~~
  908 |                       "    OpenMP: max threads: %d (library: %" VL_FMT_SIZE ")\n"
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  909 | #endif
      | ~~~~~~        
  910 |                       "    Debug: %s\n",
      |                       ~~~~~~~~~~~~~~~~~~
  911 |                       vl_get_version_string (),
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~
  912 |                       staticString,
      |                       ~~~~~~~~~~~~~
  913 |                       vl_get_num_cpus(), cpuString,
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  914 | #if defined(_OPENMP)
      | ~~~~~~~~~~~~~~~~~~~~
  915 |                       omp_get_max_threads(), vl_get_max_threads(),
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  916 | #endif
      | ~~~~~~        
  917 |                       VL_YESNO(debug)) ;
      |                       ~~~~~~~~~~~~~~~~
             CC bin/glnxa64/objs/getopt_long.o
             CC bin/glnxa64/objs/gmm.o
             CC bin/glnxa64/objs/hikmeans.o
             CC bin/glnxa64/objs/hog.o
             CC bin/glnxa64/objs/homkermap.o
             CC bin/glnxa64/objs/host.o
vl/host.c: In function ‘vl_static_configuration_to_string_copy’:
vl/host.c:576:16: warning: null destination pointer [-Wformat-truncation=]
  576 |       length = snprintf(string, length, "%s, %s, %s",
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  577 |                         hostString,
      |                         ~~~~~~~~~~~
  578 |                         compilerString,
      |                         ~~~~~~~~~~~~~~~
  579 |                         libraryString) ;
      |                         ~~~~~~~~~~~~~~
             CC bin/glnxa64/objs/ikmeans.o
             CC bin/glnxa64/objs/imopv.o
             CC bin/glnxa64/objs/imopv_sse2.o
             CC bin/glnxa64/objs/kdtree.o
vl/kdtree.c: In function ‘vl_kdtree_build_recursively’:
vl/kdtree.c:299:10: warning: this statement may fall through [-Wimplicit-fallthrough=]
  299 |       if (dataBegin <= splitIndex && splitIndex + 1 < dataEnd) break ;
      |          ^
vl/kdtree.c:301:5: note: here
  301 |     case VL_KDTREE_MEDIAN :
      |     ^~~~
             CC bin/glnxa64/objs/kmeans.o
In file included from vl/kmeans.h:21,
                 from vl/kmeans.c:363:
vl/kmeans.c: In function ‘_vl_kmeans_quantize_f’:
vl/mathop.h:92:37: error: ‘vl_infinity_d’ not specified in enclosing ‘parallel’
   92 | #define VL_INFINITY_D (vl_infinity_d.value)
      |                       ~~~~~~~~~~~~~~^~~~~~~
vl/kmeans.c:685:34: note: in expansion of macro ‘VL_INFINITY_D’
  685 |       TYPE bestDistance = (TYPE) VL_INFINITY_D ;
      |                                  ^~~~~~~~~~~~~
In file included from vl/kmeans.c:1782:
vl/kmeans.c:672:9: note: enclosing ‘parallel’
  672 | #pragma omp parallel default(none) \
      |         ^~~
In file included from vl/kmeans.c:1788:
vl/kmeans.c: In function ‘_vl_kmeans_quantize_d’:
vl/kmeans.c:685:27: error: ‘vl_infinity_d’ not specified in enclosing ‘parallel’
  685 |       TYPE bestDistance = (TYPE) VL_INFINITY_D ;
vl/kmeans.c:672:9: note: enclosing ‘parallel’
  672 | #pragma omp parallel default(none) \
      |         ^~~
make: *** [make/dll.mak:111: bin/glnxa64/objs/kmeans.o] Error 1
Command finished with return code: 2

